<resources>
    <string name="app_name">MiniClo</string>
    <string name="title_activity_add_item">AddItem</string>
    <string name="bottomnav_menu_title">BottomNav</string>
    <string name="info_menu_title">Info</string>

    <string name="closet_bottom_nav_item_title">Closet</string>
    <string name="laundry_bottom_nav_title">Laundry</string>
    <string name="stats_bottom_nav_title">Stats</string>
    <string name="account_bottom_nav_title">Account</string>
    <string name="closet_toolbar_title">My Closet</string>
    <string name="laundry_toolbar_title">My Laundry</string>
    <string name="stats_toolbar_title">My Closet Stats</string>
    <string name="account_toolbar_title">My Account</string>

    <string name="filter_by_title">Filter By</string>
    <string name="sort_by_title">Sort By</string>
    <string name="show_all_title">Show All</string>

    <string name="info_text">Sample app showcasing use of NavigationUI library to hook two material components BottomNavigationView and NavigationView with nav graph.\n\nFind the source code on github at https://github.com/sagar-viradiya/NavigationUIDemo</string>
    <string name="nav_header_1">Jetpack</string>
    <string name="nav_header_2">Navigation</string>

    <string name="email_hint">This is an email hint</string>
    <string name="get_password_link">Get Password</string>
    <string name="back">Return</string>
    <string name="password_link">Password link</string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">Sign up</string>
    <string name="password_hint">Password hint</string>
    <string name="update_pass">Update Password</string>
    <string name="logout">Logout</string>
    <string name="password_edt_text">Edit Password</string>
    <string name="new_password">Enter New Password</string>
    <string name="suggest_donations">Suggest Donations</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_signup">SignupActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_email_com">Email@email.com</string>
</resources>
